# m-standard

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  m-standard-spec-v0.1.md  pyproject.toml
.github/workflows/: ci.yml
docs/: build-log.md  m-standards-guide.md  pragmatic-m-standard.md  spec.md  va-sac-and-pragmatic-standard.md
docs/adr/: 001-two-source-hierarchy.md  002-normative-vs-annotation-separation.md  003-per-source-preservation.md  004-tsv-plus-json-output.md  (+2 more)
integrated/: commands.json  commands.tsv  conflicts.json  conflicts.tsv  environment.json  environment.tsv  errors.json  errors.tsv  grammar-surface.json  intrinsic-functions.json  intrinsic-functions.tsv  intrinsic-special-variables.json  intrinsic-special-variables.tsv  multi-vendor-extensions.tsv  operational-m-standard.json  operational-m-standard.tsv  operators.json  operators.tsv  pattern-codes.json  pattern-codes.tsv  pragmatic-m-standard.json  pragmatic-m-standard.tsv  va-sac-compliance.json  va-sac-compliance.tsv  va-sac-rules.tsv
mappings/: README.md  iris-ansi-errors.tsv  iris-ydb-errors.tsv  va-sac.tsv  ydb-ansi-errors.tsv
schemas/: command.schema.json  conflicts.schema.json  environment-entry.schema.json  error.schema.json  grammar-surface.schema.json  intrinsic-function.schema.json  intrinsic-special-variable.schema.json  operational-m-standard.schema.json  operator.schema.json  pattern-code.schema.json  pragmatic-m-standard.schema.json  va-sac-compliance.schema.json
sources/: README.md
tests/: test_m_standard.py
tools/: clone-sac.sh  clone-ydb.sh
(+66 files in other folders)
